2.2.3 Small design fixes on mobile

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -120,6 +120,9 @@
 	}
 	select {
 		height: 30px;
+		-webkit-appearance: none;
+		appearance: auto;
+		border-radius: 0;
 	}
 	body {
 		image-rendering: pixelated;
